--- a/.gitignore
+++ b/.gitignore
@@ -270,4 +270,6 @@ cython_debug/
 .history
 .ionide
 
+*.csv
+
 # End of https://www.toptal.com/developers/gitignore/api/pycharm+all,visualstudiocode,python
